feat: add subscription receiver API (#64)
* feat: add subscription receiver API

* feat: add instrumentation

* fix: test
